fix(mobile): remove clients cards top halo on small screens
Scroll top-fade mask and stage ::before gradient were meant for desktop;
on mobile they stacked visually as an unwanted glow above the card track.

--- a/assets/scss/pages/_front-page.scss
+++ b/assets/scss/pages/_front-page.scss
@@ -364,6 +364,11 @@ html.is-projects-pinned .site-header {
     rgba(0, 0, 0, 0.5) calc(100% - #{mixins.vw(120px)}),
     transparent 100%
   );
+
+  @include mixins.mobile {
+    mask-image: none;
+    -webkit-mask-image: none;
+  }
 }
 
 .home-chaos-about-flow #home-about .services-clients__container {
